--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,11 @@
             <artifactId>testng</artifactId>
             <version>7.0.0-beta1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.36</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
