--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,10 @@
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide-testng</artifactId>
+            <version>7.7.1</version>
+        </dependency>
     </dependencies>
 </project>
