Add new task parallel execution

--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <selenium.version>4.27.0</selenium.version>
         <cucumber.version>7.20.1</cucumber.version>
+        <testng-version>7.10.2</testng-version>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>7.0.0-beta1</version>
-        </dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>${testng-version}</version>
+    </dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
@@ -66,6 +67,11 @@
             <groupId>com.codeborne</groupId>
             <artifactId>selenide-testng</artifactId>
             <version>7.7.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.29.1</version>
         </dependency>
     </dependencies>
 </project>
